<resources>
    <string name="app_name">GeoCalc</string>
    <string name="action_settings">Settings</string>
    <string name="p1LatInput">Enter Latitude for p1</string>
    <string name="p1LongInput">Enter Longitude for p1</string>
    <string name="p2LatInput">Enter Latitude for p2</string>
    <string name="p2LongitudeInput">Enter Longitude for p2</string>
    <string name="btnCalc">Calculate</string>
    <string name="btnClear">Clear</string>
    <string name="title_activity_my_settings">My Settings</string>
    <string name="lblDistance">Distance:</string>
    <string name="lblBearing">Bearing:</string>
    <string name="Dtitle">Distance Unit</string>
    <string name="Btitle">Bearing Units</string>
    <string name="Tired">Tired of typing?</string>
    <string name="search">Search</string>
    <array name="dOptions">
        <item>Kilometers</item>
        <item>Miles</item>
    </array>
    <array name="bOptions">
        <item>Degrees</item>
        <item>Mils</item>
    </array>
    <string name="title_activity_history">HistoryActivity</string>
    <string name="history_menu_name">History</string>
    <string name="origination">Origination</string>
    <string name="destination">Destination</string>
    <string name="date_of_calculation">date of calculation</string>
    <string name="todo">TODO</string>
    <string name="textview">TextView</string>
    <string name="title_activity_location_search">Location Search</string>
    <string name="location1_name">Location 1</string>
    <string name="location2_name">Location 2</string>
    <string name="date_hint">Date</string>
    <string name="location_info">Location Information</string>
    <string name="calc_date">Calculation Date</string>
</resources>
